Completed inheritance worksheet

--- a/inheritance.ipynb
+++ b/inheritance.ipynb
@@ -78,9 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sophie, Dezzie, and Alejandra are SoftDes students graduating in 2024, 2025, and 2023 respectively\n"
+     ]
+    }
+   ],
    "source": [
     "class CollegeStudent:\n",
     "    # \"initializes\" each instance of a class, storing instance attributes\n",
@@ -90,8 +98,8 @@
     "        \n",
     "sophie = CollegeStudent('Sophie', 2024)\n",
     "dezzie = CollegeStudent('Dezzie', 2025)\n",
-    "\n",
-    "print(\"{} and {} are a SoftDes students graduating in {} and {} respectively\".format(sophie.name, dezzie.name, sophie.gradyear, dezzie.gradyear))"
+    "alejandra = CollegeStudent('Alejandra', 2023)\n",
+    "print(\"{}, {}, and {} are SoftDes students graduating in {}, {}, and {} respectively\".format(sophie.name, dezzie.name, alejandra.name, sophie.gradyear, dezzie.gradyear, alejandra.gradyear))"
    ]
   },
   {
@@ -139,16 +147,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it is False that Sophie and Dezzie would probably make good MP4 partners\n",
+      "it is False that Sophie and Ian would probably make good MP4 partners\n",
+      "it is True that Sophie and Alejandra would probably make good MP4 partners\n",
+      "it is False that Sophie and Veronica would probably make good MP4 partners\n"
+     ]
+    }
+   ],
    "source": [
     "class CollegeStudent:\n",
     "    # \"initializes\" each instance of a class, storing instance attributes\n",
-    "    def __init__(self, name, gradyear, experience):\n",
+    "    def __init__(self, name, gradyear, experience, timezone):\n",
     "        self.name = name\n",
     "        self.gradyear = gradyear\n",
     "        self.experience = experience\n",
+    "        self.timezone = timezone\n",
     "       \n",
     "       \n",
     "    # compares the experience of two students\n",
@@ -157,15 +177,22 @@
     "            return False\n",
     "        elif self.gradyear == potential_partner.gradyear:\n",
     "            return False\n",
+    "        elif self.timezone != potential_partner.timezone:\n",
+    "            return False\n",
     "        else:\n",
     "            return True\n",
     "\n",
-    "sophie = CollegeStudent('Sophie', 2024, 'text mining')\n",
-    "dezzie = CollegeStudent('Dezzie', 2025, 'computational art')\n",
-    "ian = CollegeStudent('Ian', 2024, 'gene finding')\n",
+    "sophie = CollegeStudent('Sophie', 2024, 'text mining','EST')\n",
+    "dezzie = CollegeStudent('Dezzie', 2025, 'computational art','PST')\n",
+    "ian = CollegeStudent('Ian', 2024, 'gene finding','EST')\n",
+    "alejandra = CollegeStudent('Alejandra', 2023, 'computational art','EST')\n",
+    "veronica = CollegeStudent('Veronica', 2023, 'text mining','PST')\n",
     "\n",
-    "print(\"it is {} that {} and {} would probably make good MP4 partners\".format(sophie.different_perspective(dezzie), sophie.name, dezzie.name))\n",
-    "print(\"it is {} that {} and {} would probably make good MP4 partners\".format(sophie.different_perspective(ian), sophie.name, ian.name))\n"
+    "cs_list = [sophie, dezzie, ian, alejandra, veronica]\n",
+    "\n",
+    "for i in cs_list[1:]:\n",
+    "    print(\"it is {} that {} and {} would probably make good MP4 partners\".format(cs_list[0].different_perspective(i), cs_list[0].name, i.name))\n",
+    "    \n"
    ]
   },
   {
@@ -223,21 +250,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Olin': ['Sophie', 'Dezzie', 'Ian', 'Alejandra'], 'Wellesley': ['Veronica', 'Iane', 'Fianes'], 'Babson': ['Fiones', 'Fione', 'Fion']}\n"
+     ]
+    }
+   ],
    "source": [
     "class CollegeStudent:\n",
-    "    #Class Attribute    \n",
-    "    college = 'Olin'\n",
-    "\n",
+    "    \n",
     "    # \"initializes\" each instance of a class, storing instance attributes\n",
-    "    def __init__(self, name, gradyear, experience, major, overdue_assignments):\n",
+    "    def __init__(self, name, gradyear, experience, major, overdue_assignments,college):\n",
     "        self.name = name\n",
     "        self.gradyear = gradyear\n",
     "        self.experience = experience\n",
     "        self.major = major\n",
     "        self.overdue_assignments = overdue_assignments\n",
+    "        self.college = college\n",
     "       \n",
     "       \n",
     "    # compares the experience of two students\n",
@@ -262,11 +296,29 @@
     "            print(\"notify concern@{}.edu as soon as possible\".format(self.college))\n",
     "\n",
     "            \n",
-    "sophie = CollegeStudent('Sophie', 2024, 'text mining', 'computing', 1)\n",
-    "dezzie = CollegeStudent('Dezzie', 2025, 'computational art', 'mechanical engineering', 3)\n",
-    "ian = CollegeStudent('Ian', 2024, 'gene finding', 'undeclared', 2)\n",
+    "sophie = CollegeStudent('Sophie', 2024, 'text mining', 'computing', 1,'Olin')\n",
+    "dezzie = CollegeStudent('Dezzie', 2025, 'computational art', 'mechanical engineering', 3,'Olin')\n",
+    "ian = CollegeStudent('Ian', 2024, 'gene finding', 'undeclared', 2,'Olin')\n",
+    "alejandra = CollegeStudent('Alejandra', 2023, 'computational art','computing',1,'Olin')\n",
+    "veronica = CollegeStudent('Veronica', 2023, 'text mining','electrical engineering',2,'Wellesley')\n",
+    "iane = CollegeStudent('Iane', 2024, 'text mining', 'undeclared', 3,'Wellesley')\n",
+    "fiane = CollegeStudent('Fiane', 2021, 'gene finding', 'computing', 8,'Wellesley')\n",
+    "fianey = CollegeStudent('Fianey', 2022, 'computational art', 'electrical engineering', 8,'Wellesley')\n",
+    "fianes = CollegeStudent('Fianes', 2022, 'computational art', 'computing', 7,'Wellesley')\n",
+    "fiones = CollegeStudent('Fiones',2021, 'gene finding', 'undeclared', 4, 'Babson')\n",
+    "fioney = CollegeStudent('Fioney',2024, 'gene finding', 'math', 9, 'Babson')\n",
+    "fione = CollegeStudent('Fione',2025, 'text mining', 'computing', 4, 'Babson')\n",
+    "fion = CollegeStudent('Fion',2025, 'computational art', 'math', 2, 'Babson')\n",
     "\n",
-    "print(ian.on_top_of_it)"
+    "cs_list = [sophie, dezzie, ian, alejandra, veronica, iane, fiane, fianey, fianes, fiones, fioney, fione, fion]\n",
+    "\n",
+    "honor_roll = dict()\n",
+    "for i in cs_list:\n",
+    "    if i.on_top_of_it:\n",
+    "        honor_roll[i.college] = honor_roll.get(i.college,[])+[i.name]\n",
+    "    \n",
+    "    \n",
+    "print(honor_roll)\n"
    ]
   },
   {
@@ -427,7 +479,33 @@
     "    def on_top_of_it(self):\n",
     "        return False if self.overdue_assignments and self.grading_queue > 5 else True\n",
     "\n",
-    "    \n",
+    "class SoftDesCourseClass():\n",
+    "    def __init__(self, all_students):\n",
+    "        self.all_students = all_students\n",
+    "\n",
+    "    def assign_sections(self):\n",
+    "        sections = dict{}\n",
+    "        assistants_on_top = []\n",
+    "        assistants_behind = []\n",
+    "        students_on_top = []\n",
+    "        students_behind = []\n",
+    "        for p in self.all_students:\n",
+    "            if p type(SoftDesCourseAssistant):\n",
+    "                if p.on_top_of_it:\n",
+    "                    assistants_on_top.append(p.name)\n",
+    "                else:\n",
+    "                    assistants_behind.append(p.name)\n",
+    "            else:\n",
+    "                if p.on_top_of_it:\n",
+    "                    students_on_top.append(p.name)\n",
+    "                else:\n",
+    "                    students_behind.append(p.name)\n",
+    "        assistants_on_top \n",
+    "                    \n",
+    "                    \n",
+    "                    \n",
+    "        \n",
+    "        \n",
     "sophie = OlinSoftDesStudent('Sophie', 2024, 'text mining', 'computing', 6)\n",
     "dezzie = BabsonSoftDesStudent('Dezzie', 2025, 'computational art', 'mechanical engineering', 3)\n",
     "ian = SoftDesCourseAssistant('Ian', 2024, 'gene finding', 'undeclared', 2, 5)\n",
@@ -634,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
