Debugging Worksheet Completed

--- a/testing_worksheet.ipynb
+++ b/testing_worksheet.ipynb
@@ -57,16 +57,16 @@
    "source": [
     "For each of the statements below, write whether you think they will succeed or fail, and why.\n",
     "\n",
-    "* `assert True`: (your answer here)\n",
-    "* `assert 1`: (your answer here)\n",
-    "* `assert 0`: (your answer here)\n",
-    "* `assert -1`: (your answer here)\n",
-    "* `assert 1 - 1`: (your answer here)\n",
-    "* `assert \"\"`: (your answer here)\n",
-    "* `assert [None]`: (your answer here)\n",
-    "* `assert {}`: (your answer here)\n",
-    "* `assert lambda x: None`: (your answer here)\n",
-    "* `assert ValueError`: (your answer here)"
+    "* `assert True`: I believe it will succeed, as it is true\n",
+    "* `assert 1`: I believe it will succeed, as a true boolean is often expressed as 1\n",
+    "* `assert 0`: I believe it will fail because a false boolean is often expressed as 0\n",
+    "* `assert -1`: I believe it will fail because a for it to be true, it should be above 1\n",
+    "* `assert 1 - 1`: I believe it will fail because 1-1 is 0 and 0 fails\n",
+    "* `assert \"\"`: I believe it will fail because it is not an integer\n",
+    "* `assert [None]`: I believe it will fail because it is not an integer\n",
+    "* `assert {}`: I believe it will fail because it is an empty cell, and has nothing in it.\n",
+    "* `assert lambda x: None`: I believe it will succeed, as it returns or assigns a None datatype\n",
+    "* `assert ValueError`: I believe it will fail because it is an error."
    ]
   },
   {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,12 +89,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your answer here, if applicable)"
+    "Explanation above was correct"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,14 +105,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your answer here, if applicable)"
+    "Explanation above was correct"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-29403cf677e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "assert 0"
    ]
@@ -121,12 +135,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your answer here, if applicable)"
+    "Explanation above was correct."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,14 +151,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your answer here, if applicable)"
+    "Apparently it will succeed, for it might only fail, or be considered false if it is zero."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-207115ed4527>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "assert 1 - 1"
    ]
@@ -153,14 +179,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your answer here, if applicable)"
+    "Explanation above was correct."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-1e709341a2df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "assert \"\""
    ]
@@ -169,12 +207,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your answer here, if applicable)"
+    "Explanation above was correct.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,14 +223,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your answer here, if applicable)"
+    "It will not fail if it is a list with None, because it means that no data is there, and sometimes some functions will return that under some circumstances, and it will still be correct."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-226d154452a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "assert {}"
    ]
@@ -201,12 +251,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your answer here, if applicable)"
+    "Explanation above was correct."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,12 +267,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your answer here, if applicable)"
+    "Explanation above was correct."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your answer here, if applicable)"
+    "Explanation above was correct."
    ]
   },
   {
@@ -301,11 +351,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def modulo(x, n):\n",
+    "    assert n>0\n",
     "    while x > n:\n",
     "        x -= n\n",
     "    return x"
@@ -315,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your reasoning goes here)"
+    "I don't believe any other assert statement is necessary, as all of the errors will be caught by typeerror in the `x -= n` , or another error in the `x > n` if they cannot be compared."
    ]
   },
   {
@@ -381,8 +432,11 @@
    "metadata": {},
    "source": [
     "```\n",
-    "(your answer goes here; DO NOT delete the backticks (`) above or below this line)\n",
-    "```"
+    "alejandra@alejandra-Latitude-5401:~/ReadingJournal$ pytest-3 --version\n",
+    "This is pytest version 3.3.2, imported from /usr/lib/python3/dist-packages/pytest.py\n",
+    "\n",
+    "```\n",
+    "When installing with python3-pytest, you need to input `$pytest-3 --version` otherwise it won't work"
    ]
   },
   {
@@ -428,7 +482,24 @@
    "metadata": {},
    "source": [
     "```\n",
-    "(your answer goes here; DO NOT delete the backticks (`) above or below this line)\n",
+    "alejandra@alejandra-Latitude-5401:~/ReadingJournal$ pytest-3 test_sample.py\n",
+    "============================= test session starts ==============================\n",
+    "platform linux -- Python 3.6.9, pytest-3.3.2, py-1.5.2, pluggy-0.6.0\n",
+    "rootdir: /home/alejandra/ReadingJournal, inifile:\n",
+    "collected 1 item                                                               \n",
+    "\n",
+    "test_sample.py F                                                         [100%]\n",
+    "\n",
+    "=================================== FAILURES ===================================\n",
+    "_________________________________ test_answer __________________________________\n",
+    "\n",
+    "    def test_answer():\n",
+    ">       assert func(3) == 5\n",
+    "E       assert 4 == 5\n",
+    "E        +  where 4 = func(3)\n",
+    "\n",
+    "test_sample.py:7: AssertionError\n",
+    "=========================== 1 failed in 0.01 seconds ===========================\n",
     "```"
    ]
   },
@@ -444,7 +515,27 @@
    "metadata": {},
    "source": [
     "```\n",
-    "(your answer goes here; DO NOT delete the backticks (`) above or below this line)\n",
+    "alejandra@alejandra-Latitude-5401:~/ReadingJournal$ pytest-3 test_class.py\n",
+    "============================= test session starts ==============================\n",
+    "platform linux -- Python 3.6.9, pytest-3.3.2, py-1.5.2, pluggy-0.6.0\n",
+    "rootdir: /home/alejandra/ReadingJournal, inifile:\n",
+    "collected 2 items                                                              \n",
+    "\n",
+    "test_class.py .F                                                         [100%]\n",
+    "\n",
+    "=================================== FAILURES ===================================\n",
+    "______________________________ TestClass.test_two ______________________________\n",
+    "\n",
+    "self = <test_class.TestClass object at 0x7f249ebfbfd0>\n",
+    "\n",
+    "    def test_two(self):\n",
+    "        x = \"hello\"\n",
+    ">       assert hasattr(x, \"check\")\n",
+    "E       AssertionError: assert False\n",
+    "E        +  where False = hasattr('hello', 'check')\n",
+    "\n",
+    "test_class.py:9: AssertionError\n",
+    "====================== 1 failed, 1 passed in 0.01 seconds ======================\n",
     "```"
    ]
   },
@@ -460,7 +551,15 @@
    "metadata": {},
    "source": [
     "```\n",
-    "(your answer goes here; DO NOT delete the backticks (`) above or below this line)\n",
+    "alejandra@alejandra-Latitude-5401:~/ReadingJournal$ pytest-3 test_sample.py\n",
+    "============================= test session starts ==============================\n",
+    "platform linux -- Python 3.6.9, pytest-3.3.2, py-1.5.2, pluggy-0.6.0\n",
+    "rootdir: /home/alejandra/ReadingJournal, inifile:\n",
+    "collected 1 item                                                               \n",
+    "\n",
+    "test_sample.py .                                                         [100%]\n",
+    "\n",
+    "=========================== 1 passed in 0.00 seconds ===========================\n",
     "```"
    ]
   },
@@ -585,7 +684,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your answer goes here)"
+    "preconditions: is an iterable list filled with values that can be compared to sort. \n",
+    "postconditions: list is same length as at the start, returns a list filled with the same things."
    ]
   },
   {
@@ -599,7 +699,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your answer goes here)"
+    "The major change would be that the items in the list have to be able to be compared in terms of <. If the items are unable to be compared in that manner, the function will fail. The list must also be mutable. \n",
+    "Other than that, the pre and post conditions remain the same, other than the fact that the same list is changed, a new one is not created."
    ]
   },
   {
@@ -618,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,6 +747,21 @@
    "metadata": {},
    "source": [
     "### Exercise: Testing Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_sorted():\n",
+    "    assert sorted([1,3,4,5]) == [1,3,4,5]\n",
+    "    assert sorted([[2 , 2 ] ,[1,3], [1,4]]) ==[ [1, 3], [1,4] ,[2,2]]\n",
+    "    assert sorted([['b',2], ['a',4], ['a',3]]) == [['a', 3], ['a',4], ['b',2]]\n",
+    "    assert sorted(['d','a','b','c']) == ['a','b','c','d']\n",
+    "    \n",
+    "test_sorted()\n"
    ]
   },
   {
@@ -677,7 +793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Link: (fill this in)"
+    "https://github.com/sd2020spring/GeneFinder-mcuevas-olin.git"
    ]
   },
   {
@@ -691,7 +807,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(your paragraphs go here)"
+    "First thing I did was ensure that the incoming string only contained alphabetical characters by asserting that dna.isalpha would be true. This also serves as a way to ensure that the input dna is in a string. I then made all of the characters in the string uppercase.\n",
+    "I checked that the input dna string only contained alphabetical characters (or was an empty string) at the beginning of all of the functions, which again, served a second purpose by ensuring that the dna input would always be a string. In the function for the longest ORF noncoding, I also asserted that the num_trials input had to be a positive integer, as there can only be a positive number of trials. This will help prevent any future problems that could potentially be caused by not inputing a positive integer number of trials.\n",
+    "As for the unit test themselves, when I created the doc string tests, I was very meticulous in covering most of the different cases for the possible inputs, so they would not really serve any purpose in particular. That said, I still did it because it was required for the assignment. The functions themselves are perfectly fine in terms of what they can or cannot do, and serve their purpose well. The one thing I limited was the assertions I had mentioned beforehand, as well as in the get_complement function I asserted that the incoming Nucleotide had to be 'A','T','G', or 'C'.\n"
    ]
   },
   {
@@ -767,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
